# xclass

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: ablation_ps1_only.py  fix_snr_hst_photometry.py  leakage_test.py  optical_coverage_diag.py  regen_sed_quality_fig.py  run_pipeline.py  snr_feature_test.py  snr_leakage_diagnostic.py  validate_sed.py
tests/: conftest.py  test_catalog.py  test_crossmatch.py  test_features.py  test_query.py  test_sed.py
xclass/: __init__.py  catalog.py  classifier.py  config.py  crossmatch.py  diagnostics.py  features.py  io.py  manifest.py  photometry.py  pipeline.py  query.py  sed.py  snr.py
