[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xclass"
version = "0.1.0"
description = "Extragalactic X-ray Source Classifier — ML pipeline for Chandra source classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "requests>=2.31",
    "shapely>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "synphot>=1.3",
    "joblib>=1.3",
    "tqdm>=4.65",
    "tenacity>=8.2",
]

# Optional extras (not required for the core pipeline / `import xclass`):
#   test   — to run the pytest suite under tests/
#   config — PyYAML, only needed for `run_pipeline.py --config <file>.yaml`
[project.optional-dependencies]
test = ["pytest>=7.4"]
config = ["pyyaml>=6.0"]

[project.scripts]
xclass-run = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xclass*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
